<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coly_edit_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.esiea.orienteering.view.EditFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="Autofill">

            <EditText
                android:id="@+id/et_name"
                style="@style/sty_formfields"
                android:hint="@string/ht_name"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:maxWidth="488dp" />

            <TextView
                style="@style/sty_textview"
                android:text="@string/txt_color"
                android:labelFor="@id/colpi_color"/>
            <com.larswerkman.holocolorpicker.ColorPicker
                android:id="@+id/colpi_color"
                style="@style/sty_formfields"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                style="@style/sty_textview"
                android:text="@string/txt_numMarkers"
                android:labelFor="@id/sli_numMarkers"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/sli_numMarkers"
                style="@style/sty_sliders" />

            <TextView
                style="@style/sty_textview"
                android:text="@string/txt_minDistance"
                android:labelFor="@id/sli_minDistance"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/sli_minDistance"
                style="@style/sty_sliders" />

            <TextView
                style="@style/sty_textview"
                android:text="@string/txt_maxDistance"
                android:labelFor="@id/sli_maxDistance"/>
            <com.google.android.material.slider.Slider
                android:id="@+id/sli_maxDistance"
                style="@style/sty_sliders"
                android:valueFrom="1"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
